# ps-aim-windows

./: .gitignore  Cargo.toml  LICENSE  README.md  bundle.bat
src/: aim_report.rs  config.rs  crc32.rs  ds4_mode.rs  hidhide.rs  lightgun_mode.rs  main.rs  motion_fusion.rs  pseye_client.rs  rawinput_mode.rs  rumble.rs
tracker/: pseye_psaimtrackerui.bat
ui/: package-lock.json  package.json
ui/src/: index.html  main.js  preload.js
