[package]
name = "ps-aim-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
vigem-rust = "0.1.1"
hidapi = "2.6.6"
serde_json = "1"
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_System_JobObjects"] }

[patch.crates-io]
vigem-rust = { path = "../vigem-rust-master" }